# text-ticker

./: CMakeLists.txt  build.sh
cmake/: FindCheck.cmake
src/: CMakeLists.txt  app.c  app.h  arg_parser.c  arg_parser.h  main.c  plugin_manager.c  plugin_manager.h  readIn.h  read_in.c
src/plugins/: identity.c  single_rotate.c
src/plugins/common/: util.c  util.h
test/: CMakeLists.txt
